# sparsegrid

./: .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  README.md  vcpkg.json
perft/: CMakeLists.txt  main.cpp  runner.cpp  runner.h
pytest/: gamesdb.py  main.py  mct.py
sgtrain/: .gitattributes  agents.py  converters.py  gamesdb.py  main.py  mct.py  models.py  requirements.txt  selfplay.py  sg_model_weights.pt  sgadamo.pt  sgfiles.py  sgs.pt  sgsgdo.pt  sgw.pt  sgw_native.nn  test_shared_weight.py
src/: CMakeLists.txt  engine.cpp  engine.h  interop.cpp  interop.h  interop2.cpp  main.cpp
src/adapters/: polyglot.cpp  polyglot.h  polyglot_hashkeys.cpp
src/board/: board.cpp  board.h  board_state.cpp  board_state.h  move.cpp  move.h  movegen.cpp  movegen.h  pieces.h
src/common/: options.cpp  options.h  stat.cpp  stat.h
src/core/: CallerThreadExecutor.cpp  CallerThreadExecutor.h  ThreadContext.h  ThreadPoolExecutor.cpp  ThreadPoolExecutor.h  caller_thread_executor.cpp  caller_thread_executor.h  defs.cpp  defs.h  gens.h  scores.h
src/dbg/: debugger.cpp  debugger.h  sg_assert.h  sg_log.cpp  sg_log.h
src/eval/: evaluator.cpp  evaluator.h
src/search/: book.cpp  book.h  mtdsearch.cpp  mtdsearch.h  tm.cpp  tm.h  tt.cpp  tt.h
src/uci/: fen.cpp  fen.h  protocol.cpp  protocol.h
tests/: CMakeLists.txt  main.cpp  test_board.cpp  test_board_state.cpp  test_evals.cpp  test_fen.cpp  test_hashing.cpp  test_mtdsearch.cpp  test_multithreading.cpp  test_polyglot.cpp  test_undo.cpp  test_utils.cpp  test_utils.h
